- TODO [OVERLAPPY] added Chain mode with nHair
- TODO [OVERLAPPY] added collisions UI
- TODO [OVERLAPPY] added nRigid collision logic
- TODO added non-cycle origin animation with loop mode
**********************************************

v1.3.2
- [OVERLAPPY] fixed incorrect reset settings on Point setup after Aim or Combo used.
- [OVERLAPPY] added save and load settings buttons.

v1.3.1
- [TOOLS] added Up locator to Aim Space Switcher.
- [OVERLAPPY] simplify and merge rig setup logic into one method.

v1.3.0
- [UI] added new features to shelf buttons.
- [UI] moved motion trail buttons from "Experimental" to "Motion Trail" group.
- [UI] changed window width from 280 to 300.
- [UTILS] added button "Print Animatable Attributes".
- [UTILS] added button "Parent Shapes".
- [UTILS] added button "Select Hierarchy Transforms".
- [UTILS] added button "Save Pose To Shelf".
- [TOOLS] changed aim space UI.
- [TOOLS] changed baking samples UI.
- [RIGGING] changed UI structure.
- [RIGGING] added button "Create Curve From Selected Objects".
- [RIGGING] added button "Create Curve From Trajectory" as a draft tool.
- [RIGGING] improved "Constraints" module and add attributes filtering.
- [OVERLAPPY] reworked aim offset UI.
- [OVERLAPPY] separated rig creation buttons for "Point", "Aim" and "Combo" modes.
- [OVERLAPPY] moved timeScale slider to "Nucleus Properties" panel.
- [OVERLAPPY] added nucleus gravity settings.
- [OVERLAPPY] added loop cycles to option menu.

v1.2.6
- added to Settings.py file default value for "checkboxEulerFilter".

v1.2.5
- [OVERLAPPY] added confirm dialog for zero particle offset.
- [UTILS] added draft annotation creation logic.
- [UI] replaced button icon change approach, now simply use Help/Change Icon for toggling icons.
- [UI] added "Options" menu with euler filter checkbox.
- [UI] moved "To Shelf" menu to the new "Options" menu.
- [UI] changed the color of the black panel to a lighter color (0.00 => 0.13).