@@ -11,6 +11,7 @@ GETools changelog
 v1.3.2
 - [OVERLAPPY] fixed incorrect reset settings on Point setup after Aim or Combo used.
 - [OVERLAPPY] added save and load settings buttons.
+- [OVERLAPPY] added presets.
 
 v1.3.1
 - [TOOLS] added Up locator to Aim Space Switcher.
